# rust-embedded

drop/: Cargo.toml  README.md
drop/src/: main.rs
life/: Cargo.toml  README.md
life/.cargo/: cargo.toml
life/src/: main.rs
